Implemented RPC wrapper to some stdlib functions [experimental]

--- a/trunk/tests/Makefile
+++ b/trunk/tests/Makefile
@@ -1,10 +1,30 @@
 
 INCLUDE = -I../simple_rpc/include
+RPC_BUILD_OPTS = -pthread -lboost_system -lboost_serialization
 
 all: tests
-tests: test_std_scalars
+tests: test_std_scalars test_stdlib
 
-all_apps : std_scalars_app std_scalars_app-rpc std_scalars_app-rpc-server
+stdlib-rpc.cpp : ../simple_rpc/include/stdlib.hpp
+	simple_rpc ../simple_rpc/include/stdlib.hpp
+stdlib-rpc-server.cpp : ../simple_rpc/include/stdlib.hpp
+	simple_rpc ../simple_rpc/include/stdlib.hpp
+stdlib_app : stdlib_app.cpp
+	g++ $(INCLUDE) stdlib_app.cpp -o stdlib_app
+
+stdlib_app-rpc : stdlib-rpc.cpp stdlib_app.cpp
+	g++ $(INCLUDE) -DSimpleRPC=SimpleRPC_stdlib stdlib_app.cpp stdlib-rpc.cpp -o stdlib_app-rpc $(RPC_BUILD_OPTS)
+
+stdlib_app-rpc-server : stdlib-rpc-server.cpp
+	g++ $(INCLUDE) stdlib-rpc-server.cpp -o stdlib_app-rpc-server $(RPC_BUILD_OPTS)
+
+test_stdlib : stdlib_app stdlib_app-rpc stdlib_app-rpc-server
+	./stdlib_app
+	killall ./stdlib_app-rpc-server || exit 0
+	./stdlib_app-rpc-server &
+	@sleep 0.2
+	./stdlib_app-rpc
+	killall ./stdlib_app-rpc-server || exit 0
 
 std_scalars.hpp : std_scalars.cpp ../scripts/make_hpp 
 	../scripts/make_hpp std_scalars.cpp
@@ -24,7 +44,7 @@ std_scalars_app-rpc : std_scalars-rpc.cpp std_scalars_app.cpp
 std_scalars_app-rpc-server : std_scalars-rpc-server.cpp std_scalars.cpp
 	g++ -g $(INCLUDE) std_scalars-rpc-server.cpp std_scalars.cpp -pthread -lboost_system -o std_scalars_app-rpc-server -lboost_serialization
 
-test_std_scalars: all_apps
+test_std_scalars: std_scalars_app std_scalars_app-rpc std_scalars_app-rpc-server
 	./std_scalars_app                          # executes C/C++ functions directly
 	killall ./std_scalars_app-rpc-server || exit 0       # stop RPC server
 	./std_scalars_app-rpc-server  & # start RPC server
