--- a/trunk/tests/Makefile
+++ b/trunk/tests/Makefile
@@ -5,15 +5,18 @@ RPC_BUILD_OPTS = -pthread -lboost_system -lboost_serialization
 all: tests
 tests: test_std_scalars test_stdlib
 
+stdlib-rpc.hpp : ../simple_rpc/include/stdlib.hpp
+	simple_rpc ../simple_rpc/include/stdlib.hpp
+
 stdlib-rpc.cpp : ../simple_rpc/include/stdlib.hpp
 	simple_rpc ../simple_rpc/include/stdlib.hpp
 stdlib-rpc-server.cpp : ../simple_rpc/include/stdlib.hpp
 	simple_rpc ../simple_rpc/include/stdlib.hpp
-stdlib_app : stdlib_app.cpp
-	g++ $(INCLUDE) stdlib_app.cpp -o stdlib_app
+stdlib_app : stdlib_app.cpp stdlib-rpc.hpp
+	g++ $(INCLUDE) stdlib_app.cpp -o stdlib_app -DDISABLE_SIMPLE_RPC
 
-stdlib_app-rpc : stdlib-rpc.cpp stdlib_app.cpp
-	g++ $(INCLUDE) -DSimpleRPC=SimpleRPC_stdlib stdlib_app.cpp stdlib-rpc.cpp -o stdlib_app-rpc $(RPC_BUILD_OPTS)
+stdlib_app-rpc : stdlib-rpc.cpp stdlib_app.cpp stdlib-rpc.hpp
+	g++ $(INCLUDE) stdlib_app.cpp stdlib-rpc.cpp -o stdlib_app-rpc $(RPC_BUILD_OPTS)
 
 stdlib_app-rpc-server : stdlib-rpc-server.cpp ../simple_rpc/include/stdlib.cpp
 	g++ $(INCLUDE) stdlib-rpc-server.cpp ../simple_rpc/include/stdlib.cpp -o stdlib_app-rpc-server $(RPC_BUILD_OPTS)
@@ -29,13 +32,15 @@ test_stdlib : stdlib_app stdlib_app-rpc stdlib_app-rpc-server
 std_scalars.hpp : std_scalars.cpp ../scripts/make_hpp 
 	../scripts/make_hpp std_scalars.cpp
 
+std_scalars-rpc.hpp : std_scalars.hpp
+	simple_rpc std_scalars.hpp
 std_scalars-rpc.cpp  : std_scalars.hpp
 	simple_rpc std_scalars.hpp
 std_scalars-rpc-server.cpp  : std_scalars.hpp
 	simple_rpc std_scalars.hpp
 
-std_scalars_app : std_scalars.hpp std_scalars_app.cpp
-	g++ std_scalars_app.cpp std_scalars.cpp -o std_scalars_app
+std_scalars_app : std_scalars.hpp std_scalars_app.cpp std_scalars-rpc.hpp
+	g++ std_scalars_app.cpp std_scalars.cpp -o std_scalars_app -DDISABLE_SIMPLE_RPC
 
 
 std_scalars_app-rpc : std_scalars-rpc.cpp std_scalars_app.cpp
@@ -53,4 +58,4 @@ test_std_scalars: std_scalars_app std_scalars_app-rpc std_scalars_app-rpc-server
 	killall ./std_scalars_app-rpc-server || exit 0       # stop RPC server
 
 clean:
-	rm -fv *.o *_app *_app-rpc* *-rpc*.cpp
+	rm -fv *.o *_app *_app-rpc* *-rpc*.cpp *-rpc*.hpp
